Kelsey Development Sandbox/src/objects/Custom_Reporting__c.object
<CustomObject>
    <fields>
        <fullName>AgeCurrentAge__c</fullName>
        <label>AgeCurrentAge</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>AgeGroup_0_4__c</fullName>
        <defaultValue>false</defaultValue>
        <label>AgeGroup 0 4</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>AgeGroup_10_12__c</fullName>
        <defaultValue>false</defaultValue>
        <label>AgeGroup 10 12</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>AgeGroup_13_17__c</fullName>
        <defaultValue>false</defaultValue>
        <label>AgeGroup 13 17</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>AgeGroup__c</fullName>
        <label>AgeGroup</label>
        <length>45</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Client__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Client</label>
        <referenceTo>Client__c</referenceTo>
        <relationshipLabel>Custom Reportings</relationshipLabel>
        <relationshipName>Custom_Reportings</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>DateEarliest__c</fullName>
        <label>DateEarliest</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>DateMostRecent__c</fullName>
        <label>DateMostRecent</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>EthnicityGroup__c</fullName>
        <label>EthnicityGroup</label>
        <length>70</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EthnicityHispanic__c</fullName>
        <defaultValue>false</defaultValue>
        <label>EthnicityHispanic</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>EthnicityMissing__c</fullName>
        <defaultValue>false</defaultValue>
        <label>EthnicityMissing</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>EthnicityNonHispanic__c</fullName>
        <defaultValue>false</defaultValue>
        <label>EthnicityNonHispanic</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>EthnicityRefusedUnknown__c</fullName>
        <defaultValue>false</defaultValue>
        <label>EthnicityRefusedUnknown</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>GenderFemale__c</fullName>
        <defaultValue>false</defaultValue>
        <label>GenderFemale</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>GenderIdentity__c</fullName>
        <label>GenderIdentity</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GenderMale__c</fullName>
        <defaultValue>false</defaultValue>
        <label>GenderMale</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>GenderMissing__c</fullName>
        <defaultValue>false</defaultValue>
        <label>GenderMissing</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>GenderOther__c</fullName>
        <defaultValue>false</defaultValue>
        <label>GenderOther</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>GenderRefusedUnknown__c</fullName>
        <defaultValue>false</defaultValue>
        <label>GenderRefusedUnknown</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>GenderTrans__c</fullName>
        <defaultValue>false</defaultValue>
        <label>GenderTrans</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Id__c</fullName>
        <label>Id</label>
        <length>20</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>MilitaryAssociated__c</fullName>
        <defaultValue>false</defaultValue>
        <label>MilitaryAssociated</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>MilitaryMissing__c</fullName>
        <defaultValue>false</defaultValue>
        <label>MilitaryMissing</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>RaceAfricanAmerican__c</fullName>
        <defaultValue>false</defaultValue>
        <label>RaceAfricanAmerican</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>RaceAmericanIndianAKNative__c</fullName>
        <defaultValue>false</defaultValue>
        <label>RaceAmericanIndianAKNative</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>RaceAsian__c</fullName>
        <defaultValue>false</defaultValue>
        <label>RaceAsian</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>RaceGroup__c</fullName>
        <label>RaceGroup</label>
        <length>85</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RaceHIPacificIslander__c</fullName>
        <defaultValue>false</defaultValue>
        <label>RaceHIPacificIslander</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>RaceMultiracial__c</fullName>
        <defaultValue>false</defaultValue>
        <label>RaceMultiracial</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>RaceUnknownRefused__c</fullName>
        <defaultValue>false</defaultValue>
        <label>RaceUnknownRefused</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>RaceWhite__c</fullName>
        <defaultValue>false</defaultValue>
        <label>RaceWhite</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>TreatmentAsPlanned__c</fullName>
        <defaultValue>false</defaultValue>
        <label>TreatmentAsPlanned</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>TreatmentCompleted__c</fullName>
        <defaultValue>false</defaultValue>
        <label>TreatmentCompleted</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>TreatmentMissing__c</fullName>
        <defaultValue>false</defaultValue>
        <label>TreatmentMissing</label>
        <type>Checkbox</type>
    </fields>
    <label>Custom Reporting</label>
    <nameField>
        <label>Custom Report Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Custom Reportings</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>